# dev-ai

./: .env.example  .gitignore  CONSOLIDATED_FIXES.md  CUSTOMIZATION.md  Dockerfile  Dockerfile.sandbox  INSTALLATION.md  JIRA_INTEGRATION.md  LOCAL_SETUP_FIXES.md  Makefile  SETUP_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
agent/: prompt.py  review_style_analyzer.py  reviewer.py  server.py  webapp.py
agent/dashboard/: project_repos.py  routes.py  thread_api.py
agent/integrations/: docker.py  local.py
agent/middleware/: __init__.py  callback_metadata_logger.py  consecutive_failure_breaker.py  docker_cleanup.py  jira_plan_sync.py  log_langfuse_metadata.py  model_fallback.py  multi_repo_clone.py  notify_step_limit.py  ticket_token_usage.py
agent/tools/: __init__.py  jira_comment.py
agent/utils/: config.py  github_comments.py  github_user_email_map.py  jira.py  jira_project_repo_map.py  model.py  multi_repo_registry.py  repo.py  repo_selector.py  sandbox.py  sandbox_paths.py  tracing.py  tracing_diagnostics.py
docs/: MULTI_REPO_ROUTING.md  MULTI_REPO_SETUP_GUIDE.md  langfuse-tracing-handoff.md
skills/code-review/: SKILL.md
skills/documentation/: SKILL.md
skills/testing/: SKILL.md
tests/: test_jira_webhook.py  test_multi_repo.py  test_register_repos.py  test_verify_registry.py
tests/middleware/: test_jira_plan_sync.py
