[project]
name = "open-swe-agent"
version = "0.1.0"
description = "Open SWE Agent - Python agent for automating software engineering tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "PyJWT>=2.12.1",
    "cryptography>=41.0.0",
    "langgraph-sdk>=0.3.13",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "markdownify>=1.2.3",
    "langchain-anthropic>=1.4.2",
    "langgraph-cli[inmem]>=0.4.24",
    "langsmith>=0.8.3",
    "langchain-openai>=1.3.3",
    "langchain-daytona>=0.0.7",
    "langchain-modal>=0.0.5",
    "langchain-runloop>=0.0.6",
    "exa-py>=2.15.0",
    "langchain-google-genai>=4.2.2",
    "langfuse>=4.12.0",
    "jsonpatch>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "Pygments>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
